force-app/main/default/objects/Opportunity_Product_Change_Request__c/Opportunity_Product_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Change Request</label>
    <nameField>
        <label>Opportunity Product Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>