force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Products</fullName>
            </value>
            <value>
                <fullName>Update Products</fullName>
            </value>
            <value>
                <fullName>Split Opportunities</fullName>
            </value>
            <value>
                <fullName>Color Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>