force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Decision_Needed__c.field-meta.xml
<CustomField>
    <fullName>Decision_Needed__c</fullName>
    <label>Decision Needed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Needed</fullName>
                <default>true</default>
                <label>Approval Needed</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>