force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Inventory_Products_Color_Change__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Products_Color_Change__c</fullName>
    <label>Inventory Products Color Change</label>
    <length>40</length>
    <type>Text</type>
</CustomField>