force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/New_Opportunity_For_Split__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_For_Split__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Opportunity For Split</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests (New Opportunity For Split)</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>