force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Old_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Product</label>
    <referenceTo>zkmulti__MCCustoms_Item__c</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>