force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Old_Product_II__c.field-meta.xml
<CustomField>
    <fullName>Old_Product_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Product II</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests (Old Product II)</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>