force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Old_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Old_Quantity__c</fullName>
    <label>Old Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>