force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Old_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Sales_Price__c</fullName>
    <label>Old Sales Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>