force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Opportunity_Product_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Product Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>