force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Product_Requested__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Requested</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>