force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Change Requests</relationshipLabel>
    <relationshipName>Opportunity_Product_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>