force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Sales_Price_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Requested__c</fullName>
    <label>Sales Price Requested</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>