force-app/main/default/objects/Opportunity_Product_Change_Request__c/fields/Youth_or_Adult_to_New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Youth_or_Adult_to_New_Opportunity__c</fullName>
    <label>Youth or Adult to New Opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>